# karta

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  docker-compose.ghcr.yml  docker-compose.prod.yml  docker-compose.yml  igaming_glossary.md  install.sh  nginx.conf  nginx.ssl.conf
api/: .dockerignore  Dockerfile  cache.py  crypto.py  database.py  engine_cache.py  executor.py  history.py  json_util.py  license.py  license_keys.py  main.py  models.py  parquet_cache.py  pipeline_sql.py  pivot_postprocessing.py  pyproject.toml  rbac.py  requirements.txt  scheduler.py  screenshot.py  sql_params.py  sql_validator.py  stats.py  tenant_middleware.py
api/ai/: agents.py  insights.py  llm_client.py  prompts.py  router.py  tools.py
api/alerts/: baseline.py  executor.py  router.py
api/analytics/: router.py
api/annotations/: router.py
api/audit/: __init__.py  router.py
api/auth/: dependencies.py  jwt.py  router.py
api/billing/: router.py
api/bookmarks/: router.py
api/charts/: router.py
api/cloud/: router.py
api/connections/: router.py
api/csv_upload/: router.py
api/dashboards/: router.py
api/datasets/: router.py
api/dbt/: parser.py  router.py
api/drafts/: router.py
api/engine_specs/: __init__.py  base.py  clickhouse.py  duckdb.py  mssql.py  mysql.py  postgres.py  sqlalchemy_uri.py
api/export/: router.py
api/favorites/: router.py
api/filters/: router.py
api/lineage/: router.py
api/meta/: router.py
api/notifications/: dispatcher.py  email.py  router.py  slack.py  telegram.py
api/renderers/: __init__.py  (+18 more)
(+283 files in other folders)
