[project]
name = "karta-api"
version = "0.1.0"
description = "Karta BI platform API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "pydantic[email]>=2.5.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "cryptography>=41.0.0",
    "apscheduler>=3.10.0",
    "openpyxl>=3.1.0",
    "httpx>=0.25.0",
    "clickhouse-sqlalchemy>=0.3.0",
    "redis>=5.0.0",
    "pymssql>=2.2.0",
    "duckdb>=1.4.0",
    "pyarrow>=14.0.0",
    "scipy>=1.11.0",
    "slowapi>=0.1.9",
    "orjson>=3.10.0",
    "playwright>=1.40.0",
]
